--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,4 +41,4 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
-          label: ${{ steps.meta.outputs.labels }}
+          labels: ${{ steps.meta.outputs.labels }}
